# p4-data-sim

./: .Rprofile  .gitignore  .gitmodules  _targets.R  pyproject.toml
.datalad/: config
R/: datalad.R  import.R  simulation.R  utils.R
config/: environment.R  packages.R
outputs/: jitter.html  nojitter.html  sim-report.Rmd
tests/: test-example.R
