[tool.poetry]
name = "p4-data-sim"
version = "0.1.0"
description = ""
authors = ["Patrick Anker <patricksanker@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "p4_data_sim"}]

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0.1"
neovim = "^0.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
